# operator_library

./: CMakeLists.txt  LICENSE
include/: BasicOperators.h
src/: BasicOperators.cpp
tests/: testBasicOperators.cpp
